# pydantic-openai

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pydantic_openai/: __init__.py  chat.py  common.py  completion.py  embeddings.py  moderation.py
