[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic_openai"
version = "0.0.1"
authors = [
  { name="Chris Hua", email="hua.christopher@gmail.com" },
]
description = "Pydantic models for OpenAI's API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pydantic",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stillmatic/pydantic-openai"
"Bug Tracker" = "https://github.com/stillmatic/pydantic-openai/issues"